--- a/binary-tree-examples/pom.xml
+++ b/binary-tree-examples/pom.xml
@@ -3,18 +3,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.example</groupId>
+    <artifactId>algo-examples</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-  <groupId>org.example</groupId>
-  <artifactId>algo-examples</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-    <module>sorting-examples</module>
-    <module>search-examples</module>
-    <module>data-structures</module>
-    <module>binary-tree-examples</module>
-    <module>single-linked-list-examples</module>
-  </modules>
+  <artifactId>binary-tree-examples</artifactId>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
